--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
 *,*::after,*::before{
     padding: 0;
     margin: 0;
@@ -8,4 +10,145 @@ body{
     height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
+    font-family: 'Rubik', sans-serif;
+    background: #0E1323;
+}
+
+.container{
+    display: flex;
+    flex-direction: row;
+}
+
+.user-timezone-container{
+    display: flex;
+    flex-direction: column;
+    width: 255px;
+    margin-right: 30px;
+}
+
+.user-profile{
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    background-color: #5747EA;
+    padding: 37px 145px 80px 32px;
+    z-index: 999;
+}
+
+.user-pic{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    border: 3px solid #D8D8D8;
+    margin-bottom: 43px;
+}
+
+.user-profile span{
+    color: #BBC0FF;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.user-name{
+    color: #FFF;
+    font-size: 40px;
+    font-weight: 400;
+}
+
+.timezone{
+    display: flex;
+    flex-direction: column;
+    padding: 51px 0px 32px 26px;
+    gap: 21px;
+    border-radius: 15px;
+    background: #1C204B;
+    margin-top: -25px;
+}
+
+.timezone-btn{
+    display: flex;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    color: #7078C9;
+    font-size: 18px;
+}
+
+.timezone .active{
+    color: #FFF;
+}
+
+.daily-rutines-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    column-gap: 30px;
+    row-gap: 30px;
+}
+
+.card-container{
+    border-radius: 15px;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.daily-rutines-container #work{
+    background-image: url('../img/work.svg');
+}
+
+.daily-rutines-container #play{
+    background-image: url('../img/play.svg');
+}
+
+.daily-rutines-container #study{
+    background-image: url('../img/study.svg');
+}
+
+.daily-rutines-container #exercise{
+    background-image: url('../img/exercise.svg');
+}
+
+.daily-rutines-container #social{
+    background-image: url('../img/social.svg');
+}
+
+.daily-rutines-container #selfcare{
+    background-image: url('../img/self-care.svg');
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    background: #1C204B;
+    padding: 30px 35px 32px 30px;
+    z-index: 999;
+    margin-top: 40px;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.title{
+    color: #FFF;
+    font-size: 18px;
+}
+
+.three-dots-btn{
+    border: none;
+    background: transparent;
+}
+
+.time{
+    color: #FFF;
+    font-size: 56px;
+    margin-bottom: 8px;
+}
+
+.last-week{
+    color: #BBC0FF;
+    font-size: 15px;
 }
