--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ body{
     background: transparent;
     color: #7078C9;
     font-size: 18px;
+    transition: color .25s ease;
 }
 
 .timezone .active{
@@ -121,16 +122,19 @@ body{
     flex-direction: column;
     border-radius: 15px;
     background: #1C204B;
-    padding: 30px 35px 32px 30px;
+    padding: 30px;
     z-index: 999;
     margin-top: 40px;
     width: 255px;
+    transition: background .25s ease;
 }
 
 .header{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
+    align-items: center;
+    padding: 5px;
 }
 
 .title{
@@ -142,6 +146,7 @@ body{
     border: none;
     background: transparent;
     cursor: pointer;
+    padding: 5px;
 }
 
 .time{
@@ -153,4 +158,14 @@ body{
 .last-week{
     color: #BBC0FF;
     font-size: 15px;
+}
+
+/* Hover Effects */
+
+.card:hover{
+    background: #33397A;
+}
+
+.timezone-btn:hover{
+    color:#fff
 }
